# carma-msgs

./: .gitignore  Dockerfile  Dockerfile-for-ros1-bridge  Dockerfile.base  Dockerfile.dev  README.md  entrypoint.sh  init-env.sh
can_msgs/: CMakeLists.txt  package.xml
can_msgs/debian/: changelog  control  rules
can_msgs/msg/: CanState.msg  Frame.msg
carma_cmake_common/: CMakeLists.txt  README.md  carma_cmake_common-extras.cmake  package.xml
carma_cmake_common/cmake/: carma_check_ros_version.cmake  carma_define_ament_executable.cmake  carma_define_ament_library.cmake  carma_package.cmake
carma_cmake_common/debian/: changelog  control  rules
carma_cooperative_perception_interfaces/: CMakeLists.txt  README.md  dependencies.cmake  package.xml  project_options.cmake  rule.yml
carma_cooperative_perception_interfaces/cmake/: configure_for_ros1.cmake
carma_cooperative_perception_interfaces/docs/: detection.md  detection_list.md  track.md  track_list.md
carma_cooperative_perception_interfaces/msg/: Detection.msg  DetectionList.msg  Track.msg  TrackList.msg
carma_debug_msgs/: CMakeLists.txt  README.md  package.xml
carma_debug_msgs/debian/: changelog  control  rules
carma_debug_msgs/msg/: LaneletIdRegulatoryElementPair.msg  MapUpdateReadable.msg  RegulatoryElement.msg  TrajectoryCurvatureSpeeds.msg
carma_debug_ros2_msgs/: CMakeLists.txt  README.md  package.xml  rule.yml
carma_debug_ros2_msgs/debian/: changelog  control
carma_debug_ros2_msgs/msg/: MapUpdateReadable.msg  TrajectoryCurvatureSpeeds.msg
carma_message_utilities/: README.md  package.xml  setup.cfg  setup.py
carma_message_utilities/carma_message_utilities/: __init__.py  file_io.py
carma_message_utilities/tests/: test_carma_message_utilities.py  test_file_io.py
carma_perception_msgs/: CMakeLists.txt  README.md  package.xml  rule.yml
carma_perception_msgs/debian/: changelog  control
carma_perception_msgs/msg/: CheckActiveGeofence.msg  ExternalObject.msg  ExternalObjectList.msg  RoadwayObstacle.msg  RoadwayObstacleList.msg  TrafficSignalInfo.msg  TrafficSignalInfoList.msg
cav_msgs/: CMakeLists.txt  README.md  package.xml
cav_msgs/debian/: changelog  control  rules
cav_msgs/msg/: ActiveControlPlugin.msg  Angle.msg  AngularVelocity.msg  AttachmentRadius.msg  Attitude.msg  BSM.msg  BSMCoreData.msg  BSMPartIIExtension.msg  BSMRegionalExtension.msg  BagData.msg  BumperHeight.msg  BumperHeights.msg  ByteArray.msg  CheckActiveGeofence.msg  CoarseHeading.msg  ComputedLane.msg  ControlBounds.msg  ControlMessage.msg  ControlRequest.msg  DailySchedule.msg  DaySchedule.msg  DetectedObjectCommonData.msg  DetectedObjectData.msg  DetectedObjectList.msg  DetectedObjectOptionalData.msg  DetectedObstacleData.msg  DetectedVRUData.msg  DetectedVehicleData.msg  DriverStatus.msg  Elevation.msg  EmergencyVehicleAck.msg  EmergencyVehicleResponse.msg  ExternalObject.msg  ExternalObjectArray.msg  ExternalObjectList.msg  FullPositionVector.msg  GenericLane.msg  GrossSpeed.msg  Heading.msg  HeadingStamped.msg  (+101 more)
cav_srvs/: CMakeLists.txt  README.md  package.xml
cav_srvs/debian/: changelog  control  rules
cav_srvs/srv/: ClearFaults.srv  ComputePlanCost.srv  GetAvailableRoutes.srv  GetPluginApi.srv  GetTransform.srv  PlanManeuvers.srv  PlanTrajectory.srv  PluginActivation.srv  ReleaseIndicatorControl.srv  RequestIndicatorControl.srv  SendMessage.srv  SetActivateRobotic.srv  SetActiveRoute.srv  SetLightBarIndicator.srv  SetLights.srv  SetTrafficEvent.srv
j2735_msgs/: CMakeLists.txt  README.md  package.xml
j2735_msgs/debian/: changelog  control  rules
j2735_msgs/msg/: AccelerationConfidence.msg  AttachmentRadius.msg  BSM.msg  BSMCoreData.msg  BSMPartIIExtension.msg  BSMRegionalExtension.msg  BrakeSystemStatus.msg  BumperHeight.msg  BumperHeights.msg  CoarseHeading.msg  ComputedLane.msg  ControlBounds.msg  ControlMessage.msg  ControlRequest.msg  ControlType.msg  ControlValue.msg  DDateTime.msg  DDay.msg  DSecond.msg  DYear.msg  DayOfWeek.msg  DaySchedule.msg  DisabledVehicle.msg  Elevation.msg  EmergencyDetails.msg  EventDescription.msg  FuelType.msg  FullPositionVector.msg  GenericLane.msg  GrossSpeed.msg  ITISGenericLocations.msg  ITISResponderGroupAffected.msg  ITIScodes.msg  LaneAttributes.msg  LaneTypeAttributes.msg  NodeAttributeSetXY.msg  NodeListXY.msg  NodeXY24b.msg  ObstacleDetection.msg  ObstacleDirection.msg  (+57 more)
j2735_v2x_msgs/: .clang-format  CMakeLists.txt  README.md  package.xml  rule.yml
j2735_v2x_msgs/debian/: changelog  control
j2735_v2x_msgs/msg/: AdvisorySpeed.msg  AdvisorySpeedList.msg  AmbientAirPressure.msg  AmbientAirTemperature.msg  Angle.msg  AnimalPropelledType.msg  AnimalType.msg  Attachment.msg  BSM.msg  BSMCoreData.msg  BSMPartIIExtension.msg  BSMRegionalExtension.msg  BasicVehicleClass.msg  BasicVehicleRole.msg  BrakeSystemStatus.msg  BumperHeight.msg  BumperHeights.msg  CoefficientOfFriction.msg  ComputedLane.msg  ConnectingLane.msg  Connection.msg  ConnectsToList.msg  DDateTime.msg  DHour.msg  DMinute.msg  DMonth.msg  DOffset.msg  DisabledVehicle.msg  ElevationConfidence.msg  EmergencyDetails.msg  EventDescription.msg  Extent.msg  ExteriorLights.msg  FuelType.msg  FullPositionVector.msg  GNSSStatus.msg  GenericLane.msg  GrossSpeed.msg  Heading.msg  HeadingConfidence.msg  (+131 more)
j2735_v2x_msgs/test/: test_to_floating_point.cpp
j3224_v2x_msgs/: CMakeLists.txt  README.md  package.xml  rule.yml
j3224_v2x_msgs/msg/: AngularVelocity.msg  AngularVelocityConfidence.msg  Attitude.msg  AttitudeConfidence.msg  DetectedObjectCommonData.msg  DetectedObjectData.msg  DetectedObjectList.msg  DetectedObjectOptionalData.msg  DetectedObstacleData.msg  DetectedVRUData.msg  DetectedVehicleData.msg  MeasurementTimeOffset.msg  ObjectDistance.msg  ObjectID.msg  ObjectType.msg  ObstacleSize.msg  ObstacleSizeConfidence.msg  PitchDetected.msg  PitchRate.msg  PitchRateConfidence.msg  PositionOffsetXYZ.msg  RollRate.msg  SensorDataSharingMessage.msg  SizeValue.msg  VehicleSizeConfidence.msg
raptor_dbw_msgs_ros2/: CMakeLists.txt  README.md  package.xml  rule.yml
raptor_dbw_msgs_ros2/msg/: SteeringCmd.msg  (+1 more)
(+229 files in other folders)
