<?xml version="1.0"?>
<package format="3">
  <name>can_msgs</name>
  <version>1.2.1</version>
  <description>CAN related message types.</description>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/can_msgs</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>
  <author email="ivor@iwanders.net">Ivor Wanders</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  
  <build_depend>carma_cmake_common</build_depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
