<?xml version="1.0"?>

<!--
Copyright 2023 Leidos

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->


<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carma_message_utilities</name>
  <version>0.1.0</version>
  <description>Contains various ROS message utilities used throughout CARMA</description>

  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>Apache 2.0</license>

  <depend>rosidl_runtime_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>ament_index_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
