<?xml version="1.0"?>
<!--
  Copyright (C) 2023 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->
<package format="3">
  <name>j3224_v2x_msgs</name>
  <version>1.0.0</version>
  <description>The j3224_v2x_msgs package</description>

  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">carma_cmake_common</build_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  
  <build_depend>carma_cmake_common</build_depend>
  <depend>std_msgs</depend>
  <depend>j2735_v2x_msgs</depend>


  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

</package>
